# lib-version

./: README.md  pyproject.toml  setup.py  version.txt
.github/workflows/: release.yml
lib-version/: __init__.py  version_util.py
lib_version/: __init__.py
libversion/: __init__.py  version_util.py
libversion.egg-info/: PKG-INFO  SOURCES.txt
